--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,5 +7,7 @@
     <tr><th>First Name:</th><td>@Model.FirstName</td></tr>
     <tr><th>Last Name:</th><td>@Model.LastName</td></tr>
     <tr><th>Role:</th><td>@Model.Role</td></tr>
+    <tr><th>City:</th><td>@Model.HomeAddress?.City</td></tr>
+    <tr><th>Country:</th><td>@Model.HomeAddress?.Country</td></tr>
 </table>
 
