Add endereço resumido com bind incorreto

--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Create Person";
     Layout = "_Layout";
 }
-    <form asp-action="Create" method="post">
+    <form asp-action="DisplaySummary" method="post">
         <div class="form-group">
             <label asp-for="PersonId"></label>
             <input asp-for="PersonId" class="form-control" />
