--- a/Views/Home/Names.cshtml
+++ b/Views/Home/Names.cshtml
@@ -1,9 +1,9 @@
-﻿@model string[]
+﻿@model IList<string>
 @{
     ViewBag.Title = "Names";
     Layout = "_Layout";
 }
-@if (Model.Length == 0)
+@if (Model.Count == 0)
 {
     <form asp-action="Names" method="post">
         @for (int i = 0; i < 3; i++)
