--- a/Views/Home/Endereco.cshtml
+++ b/Views/Home/Endereco.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IList<EnderecoResumido>
 @{
-    ViewBag.Title = "Address";
+    ViewBag.Title = "Endereço";
     Layout = "_Layout";
 }
 @if (Model.Count() == 0)
@@ -32,5 +32,5 @@ else
             <tr><td>@address.Cidade</td><td>@address.Pais</td></tr>
         }
     </table>
-    <a asp-action="Address" class="btn btn-primary">Back</a>
+    <a asp-action="Address" class="btn btn-primary">Voltar</a>
 }
