--- a/Views/Home/Nomes.cshtml
+++ b/Views/Home/Nomes.cshtml
@@ -5,7 +5,7 @@
 }
 @if (Model.Count == 0)
 {
-    <form asp-action="Names" method="post">
+    <form asp-action="Nomes" method="post">
         @for (int i = 0; i < 3; i++)
         {
             <div class="form-group">
