--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -8,8 +7,10 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div class="panel-body">
-        @RenderBody()
+    <div class="container-fluid">
+        <div class="col-6 offset-3">
+            @RenderBody()
+        </div>
     </div>
 </body>
 </html>
