--- a/Views/Home/Body.cshtml
+++ b/Views/Home/Body.cshtml
@@ -1,31 +1,34 @@
 ﻿@{
-    ViewBag.Title = "Endereço";
+    ViewBag.Title = "Body";
     Layout = "_Layout";
 }
-@section scripts {
-    <script src="~/jquery/jquery.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $("button").click(function (e) {
-                $.ajax("/Home/Body", {
-                    method: "post",
-                    contentType: "application/json",
-                    data: JSON.stringify({
-                        firstName: "Bob",
-                        lastName: "Smith"
-                    }),
-                    success: function (data) {
-                        $("#Nome").text(data.Nome);
-                        $("#Sobrenome").text(data.Sobrenome);
-                    }
-                });
-            });
-        });
-    </script>
-}
+
+<div class="bg-primary panel-body">
+    <h1 class="text-center display-4 text-white">Pessoa</h1>
+</div>
 <table class="table table-condensed table-bordered table-striped">
     <tr><th>Nome:</th><td id="Nome"></td></tr>
-    <tr><th>Sobrenome:</th><td id="Sobrenome"></td></tr>
 </table>
-<button class="btn btn-primary">Submit</button>
+<button class="btn btn-primary">Enviar</button>
 
+@section scripts {
+<script src="~/jquery/jquery.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("button").click(function (e) {
+            $.ajax("/Home/Body", {
+                method: "POST",
+                contentType: "application/json",
+                data: JSON.stringify({
+                    Nome: "Maria",
+                    Sobrenome: "Alice"
+                }),
+                success: function (data) {
+                    alert(data);
+                    $("#Nome").text(data);
+                }
+            });
+        });
+    });
+</script>
+}
