--- a/Views/Home/Cadastro.cshtml
+++ b/Views/Home/Cadastro.cshtml
@@ -3,6 +3,9 @@
     ViewBag.Title = "Cadastro Pessoa";
     Layout = "_Layout";
 }
+<div class="bg-primary panel-body">
+    <h1 class="text-center display-4 text-white">Cadastro</h1>
+</div>
 <form asp-action="Cadastro" method="post">
     <div class="form-group">
         <label asp-for="PessoaId"></label>
