--- a/Views/Home/Nomes2.cshtml
+++ b/Views/Home/Nomes2.cshtml
@@ -1,9 +1,9 @@
-﻿@model string[]
+﻿@model IList<string>
 @{
     ViewBag.Title = "Nomes";
     Layout = "_Layout";
 }
-@if (Model.Length == 0)
+@if (Model.Count == 0)
 {
     <form asp-action="Nomes" method="post">
         @for (int i = 0; i < 3; i++)
