--- a/Views/Home/Cadastro.cshtml
+++ b/Views/Home/Cadastro.cshtml
@@ -6,7 +6,7 @@
 <div class="bg-primary panel-body">
     <h1 class="text-center display-4 text-white">Cadastro</h1>
 </div>
-<form asp-action="Cadastro" method="post">
+<form asp-action="EnderecoBasico" method="post">
     <div class="form-group">
         <label asp-for="PessoaId"></label>
         <input asp-for="PessoaId" class="form-control" />
